--- a/Javascript/basic/index.html
+++ b/Javascript/basic/index.html
@@ -41,8 +41,12 @@
                 I agree to the terms and conditions
             </label>
 
+            
+
             <input type="submit" value="Register">
         </form>
+        <label for="resume"> resume</label>
+            <input type="file" >
     </div>
     <script src="script.js"></script>
 </body>
