--- a/Javascript/bookwebsite/index.html
+++ b/Javascript/bookwebsite/index.html
@@ -72,7 +72,7 @@
                 <div class="col-md-8">
                     <h1 class="display-4 mb-4">Discover Your Next Great Read</h1>
                     <p class="lead mb-4">Explore our curated collection of bestselling books and timeless classics Click Below ⬇️</p>
-                    <button class="btn btn-light btn-lg px-5" id="browse-btn">Browse Now</button>
+                    <button class="btn btn-light btn-lg px-5" id="browse-btn" onclick="fetchitems()">Browse Now</button>
                 </div>
             </div>
         </div>
